# lib_c

./: .gitignore  README.md
binary_tree/: main.cpp  (+3 more)
bis/src/client/: CMakeLists.txt  epoll_client.cpp  epoll_client.h  main.cpp  tcp_client.cpp  tcp_client.h
bis/src/client/proto/: bs_cmd.pb.cc  bs_cmd.pb.h  bs_db.pb.cc  bs_db.pb.h  bs_db.proto  bs_errcode.pb.cc  bs_errcode.proto  bs_msg.pb.cc
bis/src/client/proto/src/: test.cpp
bis/src/proxy/: CMakeLists.txt  CMakeLists.txt.linux  admin.sh  cepoll.cpp  mq_mgr.cpp  mq_mgr.h  req_factor.cpp  req_factor.h  server.cpp  server.h  server_config.cpp  server_config.h  task.cpp  task.h  timer_heap.h
bis/src/proxy/conf/: proxy.ini
bis/src/proxy/include/: CMakeLists.txt  singleton.h
bis/src/proxy/proto/: bs_db.proto  bs_msg.pb.cc  bs_msg.pb.h  bs_msg.proto
bis/src/proxy/snslib/: config.h  configure.ac
bis/src/proxy/snslib/api/: Makefile  Makefile.in
bis/src/proxy/snslib/api/adopt_api/: Makefile.in  adopt_protocol.cpp
bis/src/proxy/snslib/api/msg_centre_util/: Makefile  msg_centre_util.h
bis/src/proxy/snslib/api/paysvr_api/: Makefile  pay_api.ini  paysvr_api.cpp
bis/src/proxy/snslib/api/proto/: Makefile.in  lock.proto
bis/src/proxy/snslib/api/qqgamefeeds_api/: qqgamefeeds_api.cpp  qqgamefeeds_api.h
bis/src/proxy/snslib/api/route_info_api/: route_info_api.cpp  route_info_api.h
bis/src/proxy/snslib/api/shm_config_api_ex/: Makefile.am
bis/src/proxy/snslib/api/shmconf_api/: Makefile.in
bis/src/proxy/snslib/api/sns_oidb_api/: Makefile.am
bis/src/proxy/snslib/api/stat_map_api/: stat_map_api.ini
bis/src/proxy/snslib/api/transaction_api/: Makefile.am  app_transaction_api.h
bis/src/proxy/snslib/api/tt_feeds_api/: Makefile.am  Makefile.in
bis/src/proxy/snslib/api/vip_api/: vip_ttc.h
bis/src/proxy/snslib/api/vip_proxy_api/: vip_proxy_api.ini
bis/src/proxy/snslib/api/web_api/: Makefile.in  webapi.cpp  webapi.h  webapi_base.cpp  webapi_lock.h  webapi_qqlist.cpp  webapi_qqlist.h  webapi_randselect.cpp  webapi_test.h
bis/src/proxy/snslib/comm/: Makefile.in
bis/src/proxy/snslib/comm/buffer/: static_buffer.h
bis/src/proxy/snslib/comm/bus_api/: bus_api.cpp  bus_api.h
bis/src/proxy/snslib/comm/compress/: Makefile  zlib_compressor.cpp  zlib_compressor.h
bis/src/proxy/snslib/comm/file_lock/: file_lock.cpp
bis/src/proxy/snslib/comm/hash_db/: tchdb.h
bis/src/proxy/snslib/comm/hash_list/: hash_list.h
bis/src/proxy/snslib/comm/hdb/: Makefile  hdb.cpp  hdb.h
bis/src/proxy/snslib/comm/ini_file/: Makefile.in  ini_file.h
bis/src/proxy/snslib/comm/log/: Makefile.in  pet_log.h
bis/src/proxy/snslib/comm/mem_pool/: fixedsize_mem_pool.h
bis/src/proxy/snslib/comm/pet_mysql/: pet_mysql.cpp  pet_mysql.h
bis/src/proxy/snslib/comm/process_manager/: Makefile  Makefile.in  process_manager.cpp  process_manager.h
bis/src/proxy/snslib/comm/safe_tcp_client/: safe_tcp_client.cpp
bis/src/proxy/snslib/comm/sem_lock/: sem_lock.cpp  sem_lock.h
bis/src/proxy/snslib/comm/share_mem/: Makefile.in
bis/src/proxy/snslib/comm/shm_queue/: Makefile.am
bis/src/proxy/snslib/comm/shm_queue_ex/: Makefile  shm_queue_ex.cpp  shm_queue_ex.h  shm_queue_unique.h
bis/src/proxy/snslib/comm/timer_pool/: timer_pool.h
bis/src/proxy/snslib/comm/udp_client/: Makefile.am  udp_client.cpp
bis/src/proxy/snslib/comm/util/: Makefile.am  pet_util.cpp  pet_util.h
bis/src/proxy/snslib/comm/uuid/: Makefile.in  simple_uuid64.cpp
bis/src/server/: CMakeLists.txt  CMakeLists.txt.linux  admin.sh  autogen.sh  cepoll.cpp  cepoll.h  cmd.cpp  cmd.h  db.cpp  db.h  main.cpp  mq_mgr.cpp  mq_mgr.h  server.cpp  server.h  server_config.cpp  server_config.h  skiplist.h  sldb.cpp  sldb.h  sort_set.cpp  sort_set.h  task.cpp  task.h  timer_heap.h
bis/src/server/conf/: server.ini
bis/src/server/include/: CMakeLists.txt  ansi_color.h  application_base.cpp  application_base.h  ini_file.cpp  ini_file.h  log_def.h  ring_queue.h
bis/src/server/proto/: CMakeLists.txt  autogen.sh  bs_cmd.proto  bs_db.pb.cc  bs_db.pb.h  bs_db.proto  bs_errcode.pb.h  bs_msg.pb.h  bs_msg.proto  msg_head.h
bis/src/server/proto/src/: bs_cmd.pb.cc  bs_cmd.pb.h  bs_msg.pb.cc  bs_msg.pb.h  test.cpp
bis/src/server/snslib/: Makefile.am
bis/src/server/snslib/api/: Makefile.am
bis/src/server/snslib/api/adopt_api/: Makefile  Makefile.am  adopt_api.cpp  adopt_api.h
bis/src/server/snslib/api/include/: pet_info_def.h  pet_protocol.h  sns_common.h  sns_log_def.h
bis/src/server/snslib/api/msg_centre_util/: Makefile.am  Makefile.in  msg_centre_util.cpp
bis/src/server/snslib/api/oidb_api/: Makefile  Makefile.am  oidb_api.cpp  oidb_api.h
bis/src/server/snslib/api/paysvr_api/: paysvr_proto.cpp
bis/src/server/snslib/api/proto/: Makefile  Makefile.am  qqinfo2.proto  qqlist2.proto  snsapp.proto
bis/src/server/snslib/api/qqgamefeeds_api/: Makefile.am  Makefile.in
bis/src/server/snslib/api/route_info_api/: Makefile.in
bis/src/server/snslib/api/shm_config_api_ex/: shm_config_api_ex.cpp  shm_config_api_ex.h
bis/src/server/snslib/api/shmconf_api/: Makefile  shmconf_api.h
bis/src/server/snslib/api/sns_oidb_api/: Makefile.in  sns_oidb_api.cpp  sns_oidb_api.h
bis/src/server/snslib/api/stat_map_api/: stat_map_info_def.h
bis/src/server/snslib/api/tt_feeds_api/: tt_feeds_api.cpp
bis/src/server/snslib/api/vip_api/: vip_api.ini  vip_def.cpp  vip_def.h
bis/src/server/snslib/api/vip_proxy_api/: Makefile.am  Makefile.in  vip_proxy_api.cpp  vip_proxy_proto.h
bis/src/server/snslib/api/web_api/: Makefile  webapi_conn.cpp  webapi_conn.h  webapi_kongfu.cpp  webapi_snsinfo.h  webapi_test.cpp  webapi_xboy.h
bis/src/server/snslib/comm/: Makefile.am
bis/src/server/snslib/comm/buffer/: dynamic_buffer.h  recv_buffer.h
bis/src/server/snslib/comm/bus_api/: Makefile.am  bus_api.ini  busid.txt
bis/src/server/snslib/comm/compress/: base_compressor.h
bis/src/server/snslib/comm/hash_db/: Makefile  Makefile.am  hash_db.h  hash_db.ini  tchdb.c  tcutil.c
bis/src/server/snslib/comm/hash_list/: hash_list_mmap.h  hash_list_nolock.h
bis/src/server/snslib/comm/hdb/: Makefile.am  Makefile.in
(+94 files in other folders)
